--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,33 @@
 <header class="shadow-md bg-gradient-to-r from-emerald-200 via-green-300 to-emerald-100 relative z-10">
   <nav class="p-1">
     <div class="container mx-auto flex justify-between items-center">
-      <div class="hover:scale-110 hover:cursor-pointer">
-        <i class="fa-solid fa-house fa-2xl" (click)="onBackToHome()"></i>
+      <div class="flex space-x-5">  
+       
+        <div class="flex items-center group hover:cursor-pointer space-x-2
+          shadow-2xl px-4 py-2 rounded-2xl hover:scale-105 bg-green-50"
+          (click)="onBackToHome()">
+          <img src="rama.png" class="h-6 w-6">
+          <p class="group-hover:underline"><strong>Árbol genealógico</strong></p>
+        </div>
+        
+        <div class="flex items-center group hover:cursor-pointer space-x-2
+          shadow-2xl px-4 py-2 rounded-2xl hover:scale-105 bg-green-50"
+          (click)="goToBirthDates()">
+          <i class="fa-solid fa-cake-candles text-2xl"></i>
+          <p class="group-hover:underline"><strong>Cumpleaños</strong></p>
+        </div>
+      
       </div>
+      
+
       <img src="familink_sin_fondo.png" alt="Familink Logo" class="h-18">
+      
       <div class="flex space-x-4 items-center text-emerald-700"
         (click)="showOptionsPanel = true">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="Profile Picture" class="h-14 rounded-full border-2 border-emerald-700">
         <span class="font-semibold">{{ username }}</span>
       </div>
+
       <div 
         *ngIf="showOptionsPanel"
         class="absolute top-10 right-5 bg-white shadow-lg rounded-xl z-50 p-2 flex flex-col w-80"
