--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,6 +5,7 @@
     <!-- Cabecera -->
     <div class="w-full h-32 bg-emerald-300 rounded-t-xl px-6 flex items-end justify-between">
       <h2 class="text-2xl font-bold pb-4">Iniciar sesión</h2>
+      <img src="favicon.ico" class="h-24">
     </div>
 
     <!-- Formulario -->
@@ -57,7 +58,7 @@
           
           class="px-4 py-2 bg-emerald-600 text-white font-bold rounded-xl hover:bg-emerald-700 disabled:opacity-50 disabled:cursor-not-allowed hover:cursor-pointer">
           
-          <div *ngIf="loginInProgress" class="inline-block spinner border-t-2 border-white border-solid rounded-full w-4 h-4 animate-spin ml-1"></div>
+          <div *ngIf="loginInProgress" class="inline-block spinner border-t-2 border-white border-solid rounded-full w-4 h-4 animate-spin mr-2"></div>
 
           <i *ngIf="!loginInProgress" class="fa-solid fa-arrow-right-to-bracket mr-2"></i>
           Entrar
