--- a/src/app/birth-calendar/birth-calendar.component.html
+++ b/src/app/birth-calendar/birth-calendar.component.html
@@ -1,4 +1,4 @@
-<app-header (backToHome)="onBackToHome()"></app-header>
+<app-header></app-header>
 
 <main class="bg-green-50 min-h-[calc(100vh-60px)] p-10 flex flex-col items-center justify-center space-y-5">
   <div *ngIf="loading">Cargando...</div>
