mejora de rutas

--- a/src/app/chera-family-details/chera-family-details.component.html
+++ b/src/app/chera-family-details/chera-family-details.component.html
@@ -4,6 +4,7 @@
   *ngIf="selectedPersonId"
   [personId]="selectedPersonId"
   (close)="closePanel()"
+  (personTree)="loadTree($event)"
   (personEdit)="editPerson($event)"
   (manageRelatives)="manageRelatives($event)"
 ></app-person-detail>
