buscador + nueva descripción de persona

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,8 +37,10 @@
       </div>
       
 
-      <img src="familink_sin_fondo.png" alt="Familink Logo" class="h-18">
-      
+      <!--img src="familink_sin_fondo.png" alt="Familink Logo" class="h-18"-->
+
+      <app-searcher></app-searcher>
+
       <div class="flex space-x-4 items-center text-emerald-700"
         (click)="showOptionsPanel = true">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="Profile Picture" class="h-14 rounded-full border-2 border-emerald-700">
