--- a/src/app/person-detail/person-detail.component.html
+++ b/src/app/person-detail/person-detail.component.html
@@ -1,5 +1,5 @@
 <div
-  class="fixed right-0 bg-green-50 z-[9999] overflow-y-auto 
+  class="fixed right-0 bg-green-50 z-40 overflow-y-auto 
          shadow-xl transition-transform duration-300 ease-in-out 
          rounded-l-2xl transform
          w-full sm:w-3/4 md:w-1/2 lg:w-1/3 "
