--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
   *ngIf="selectedPersonId"
   [personId]="selectedPersonId"
   (close)="closePanel()"
-  (personTree)="loadTree($event)"
+  (personTree)="navigateTo($event)"
   (personEdit)="editPerson($event)"
   (manageRelatives)="manageRelatives($event)"
 ></app-person-detail>
